--- a/python/templates/search_results.html
+++ b/python/templates/search_results.html
@@ -41,6 +41,11 @@
     <div class="content content--all">
         <div class="container-fluid">
             <div class="section">
+                <div class="panel panel--loose">
+                    <input type="button" class="btn btn--primary" value="&lt; Back" onClick="history.back()"/>
+                </div>
+            </div>
+            <div class="section">
                 <div class="panel panel--loose panel--raised base-margin-bottom">
                     <h2 class="subtitle">Results for <b>"{{ query }}"</b></h2>
                     <hr />
